libtaskmanager: do not leak fd when reading icons in waylandtaskmodel

BUG: 478831
FIXED-IN: 6.0